# hybrid-dex

./: .env.example  DEPLOYMENT_SUMMARY.md  FIX_DATABASE.md  QUICKSTART.md  README.md  fix-db.sh  package-lock.json  package.json
apps/admin-console/: index.html  package.json  vite.config.ts
apps/admin-console/src/: App.tsx
apps/web-trader/: index.html  package.json
apps/web-trader/src/: index.css
contracts/exchange/: .gitignore  hardhat.config.ts  package-lock.json  package.json
contracts/exchange/contracts/: Exchange.sol  Settlement.sol  Vault.sol
contracts/exchange/scripts/: deploy.ts
contracts/exchange/test/: Exchange.test.ts
docs/: architecture.md  failure-modes.md  matching-engine.md  security.md  settlement.md
engine/matching-engine/: Cargo.toml  build.rs
engine/matching-engine/benches/: benchmark.rs
engine/matching-engine/proto/: exchange.proto
engine/matching-engine/src/: lib.rs  main.rs
engine/matching-engine/src/api/: grpc.rs  mod.rs  ws.rs
engine/matching-engine/src/engine/: events.rs  market.rs  matching.rs  mod.rs  orderbook.rs  risk.rs
engine/matching-engine/src/metrics/: mod.rs
engine/matching-engine/src/models/: mod.rs  order.rs  price.rs  side.rs  trade.rs
engine/matching-engine/src/persistence/: mod.rs  replay.rs  snapshot.rs
engine/matching-engine/src/tests/: mod.rs
infra/docker/: docker-compose.yml  postgres.yml  redis.yml
infra/k8s/: .gitkeep
infra/terraform/: .gitkeep
scripts/: benchmark.ts  market-maker.ts  replay-engine.ts  seed-markets.ts
services/api-gateway/: Dockerfile  package.json  tsconfig.json
(+58 files in other folders)
