[package]
name = "matching-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "matching_engine"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tonic = "0.10"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.6", features = ["v4"] }
serde_json = "1.0"

[dev-dependencies]

