[package]
name = "matching-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "matching_engine"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = "0.10"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
serde_json = "1.0"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]

